--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" href="css/all.css">
 	</head>
 	<body>
-		<script src="script.js"></script>
+		<script src="js/all.js"></script>
 	</body>
 </html>
