Basic parallax effect

--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,14 @@
 		<link rel="stylesheet" href="css/all.css">
 	</head>
 	<body>
+		<div class="cat-section parallax-section">
+			<div class="cat" data-parallax="2"></div>
+			<div class="z-behind"></div>
+		</div>
+		<div class="car-section parallax-section">
+			<div class="car" data-parallax="0.5"></div>
+			<div class="z-behind"></div>
+		</div>
 		<script src="js/all.js"></script>
 	</body>
 </html>
