Objects have original position in middle of window

--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,9 @@
 			<div class="z-behind"></div>
 		</div>
 		<div class="car-section parallax-section">
-			<div class="car" data-parallax="0.5"></div>
-			<div class="z-behind"></div>
+			<div class="z-behind">
+				<div class="car" data-parallax="0.5"></div>
+			</div>
 		</div>
 		<script src="js/all.js"></script>
 	</body>
