Load colour data when in view

--- a/www/index.html
+++ b/www/index.html
@@ -7,11 +7,11 @@
 	<body>
 		<div class="cat-section parallax-section">
 			<div class="z-behind"></div>
-			<div class="cat" data-parallax="2"></div>
+			<div class="cat" data-parallax="2" data-color-href="imgs/cat.jpg"></div>
 		</div>
 		<div class="car-section parallax-section">
 			<div class="z-behind">
-				<div class="car" data-parallax="0.5"></div>
+				<div class="car" data-parallax="0.5" data-color-href="imgs/car.jpg"></div>
 			</div>
 		</div>
 		<script src="js/all.js"></script>
